--- a/src/main/webapp/css/ex11_emmet.html
+++ b/src/main/webapp/css/ex11_emmet.html
@@ -365,6 +365,14 @@
 		</tr>
 	</table>
 
+
+
+
+	table#tbl1>tr*2>td.cell${항목$}*2
+
+	table#tbl1>tr*2>td.cell${항목$}*2
+
+
 	table#tbl1>tr*10>td.cell${항목$}*5
 	<table id="tbl1">
 		<tr>
@@ -456,6 +464,15 @@
 	<h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam, quam.</h1>
 	일련의 더미데이터를 만드는 기능이다. 사람이 편하게 데이터를 생성하도록 도와줌
 	<h1>자바가 오늘을 아주 배가 날씨는 아버지 자동차 내일 모래 즐거워~</h1>
+
+
+	(h1>lorem1)+(p>lorem2)*3
+
+	<h1>Lorem.</h1>
+	<p>Lorem, ipsum.</p>
+	<p>Deleniti, sapiente!</p>
+	<p>Soluta, fuga.</p>
+
 
 	(h1>lorem8)+(p>lorem50)*3
 	<h1>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h1>
