--- a/src/main/webapp/css/ex13_background.html
+++ b/src/main/webapp/css/ex13_background.html
@@ -32,7 +32,7 @@
         /* 우리가 직접 indicator를 만드는 것도 가능하다. ! 조금 아쉬운 것은 모양이 바뀐다. */
         /* 텍스트 박스의 원래 모습이 각진 상자이다. 근데 개발자들이 모양을 css로 고쳐놓은 것이다. */
         /* 사용자가 명시적으로 서식을 주면 원래 줬던것이 풀린다. 그래서 그런 서식을 내가 직접짜야 한다. */
-        .data:focus{
+        input:focus{
             background-color: yellow;
         }
 
