--- a/src/main/webapp/css/ex18_box.html
+++ b/src/main/webapp/css/ex18_box.html
@@ -10,7 +10,7 @@
         /* #list{ table에다가 css입힘, 회색은 gray, grey 둘 다 가능 */
         .table {
             border: 1px solid gray; 
-            border-collapse: separate; /* 합친거다 */
+            border-collapse: collapse; /* 합친거다 */
             width : 800px;
             margin-top: 10px;
         }
