--- a/src/main/webapp/javascript/ex13_mouseevent.html
+++ b/src/main/webapp/javascript/ex13_mouseevent.html
@@ -14,7 +14,9 @@
             width  : 500px;
             height : 300px;
             outline: none;
-            resize : none; /* 이거걸면 사이즈 조절이 안됨 */
+            resize : none; 
+        
+            /* 이거걸면 사이즈 조절이 안됨 */
         }
     </style>
 </head>
