--- a/src/main/webapp/javascript/ex52_event.html
+++ b/src/main/webapp/javascript/ex52_event.html
@@ -59,7 +59,7 @@
         c.onclick = function() {
              alert('자식');
             //  event.cancelBubble = true;
-            // event.stopPropagation();
+            // event.();
 
             alert(event.cancelBubble); // 현재 브라우저에서 문법을 지원유무
             alert(event.stopPropagation);
