--- a/src/main/webapp/jquery/ex04_effect.html
+++ b/src/main/webapp/jquery/ex04_effect.html
@@ -86,7 +86,7 @@
             // $('#box').slideToggle(1000);
             $('#box').animate({
                 // box.style.width = parseInt(box.style.width) + 100 + 'px';
-                width: '+=100', // 이렇게 문자열로 += 붙여도 된다.. ㄷㄷ
+                width: 120, // 이렇게 문자열로 += 붙여도 된다.. ㄷㄷ
                 height : '+=50px',
                 'margin-left' : '+=50px',
                 marginTop: '+=50px'
