--- a/src/main/webapp/css/ex34_selector.html
+++ b/src/main/webapp/css/ex34_selector.html
@@ -31,13 +31,13 @@
             color:orange;
         }
 
-        li:nth-child(n){
-            color:red;
+        li:nth-child(2n){
+            color:blue;
         }
 
-        li:nth-child(2n+1){
+        /* li:nth-child(2n+1){
             color:orange;
-        }
+        } */
 
         /* li:first-child {
             color : orange;
