--- a/src/main/webapp/javascript/ex50_event.html
+++ b/src/main/webapp/javascript/ex50_event.html
@@ -55,33 +55,34 @@
         // vs 이벤트 터널링(Event Tunneling), 이벤트 캡처링(Event Capturing)
         // , 이벤트 캡처링(Event Capturing) 
 
-// 자바스크립트는 기본적으로 이벤트 버블링만 발생한다.
-// 단, 원하면 이벤트 터널링도 발생시킬 수 있다. 
-// 이벤트를 통보하는방향이 내려가는덴 변화없고
-// 올라갈 때 이벤트 실행하면서 동작
+        // 자바스크립트는 기본적으로 이벤트 버블링만 발생한다.
+        // 단, 원하면 이벤트 터널링도 발생시킬 수 있다. 
+        // 이벤트를 통보하는방향이 내려가는덴 변화없고
+        // 올라갈 때 이벤트 실행하면서 동작
 
-        // p1.onclick = function() { // 이벤트가 빨노파 다 눌러도 빨강으로 뜬다.
-        //     alert('빨강'+ event.currentTarget.id); 
-        // };
+        p1.onclick = function() { // 이벤트가 빨노파 다 눌러도 빨강으로 뜬다.
+            alert('빨강'+ event.currentTarget.id+','+ event.target.id ); 
+        };
         // // 겹쳐있다면 target, currentTarget을 상황봐서 생각해라 
 
-        p2.onclick = function (){ // 노랑색 영역 안 부분에 다 이벤트 걸린다.
-            alert('노랑'                      // 이벤트를 등록안해도 유턴한다.
-                        +event.target.id       // 유턴하는 객체 *****
-                        +event.srcElement.id  // 유턴하는 객체
-                        +this.id);            // onclick 객체를 반환한다.
-            // 겹쳤을 떄 자식 구분
-            alert('노랑'+event.currentTarget.id); // this와 동일 ***********
-            // event.cancelBubble = true; 
-        };// 이벤트를 해당 엘리먼트에 걸지 않았다고 해도 전파가 되고 버블링이 되는ㄷ
+        // p2.onclick = function (){ // 노랑색 영역 안 부분에 다 이벤트 걸린다.
+        //     alert('노랑'                      // 이벤트를 등록안해도 유턴한다.
+        //                 +event.target.id       // 유턴하는 객체 *****
+        //                 +event.srcElement.id  // 유턴하는 객체
+        //                 +this.id);            // onclick 객체를 반환한다.
+        // //     // 겹쳤을 떄 자식 구분
+        // //     alert('노랑'+event.currentTarget.id); // this와 동일 ***********
+        // //event.cancelBubble = true; 
+        // };// 이벤트를 해당 엘리먼트에 걸지 않았다고 해도 전파가 되고 버블링이 되는ㄷ
         // 1. 이걸 이벤트 건쪽에만 확인하고 싶음 event.currentTarget.id, this.id
         // 2. 버블릭시 통보되는 것 > event.target.id으로 확인
 
         // p3.onclick = function (){ // 파랑색 영역 안 부분에 다 이벤트 걸린다.
-        //     alert('파랑' + event.currentTarget.id);
-        //     // 이벤트 버블링을 여기서 중단해라!!
-        //     // - 이벤트가 일어났단 사실을 부모님들에게 알리지 마라 ! 
-        //     event.cancelBubble = true;  // event.stopPropagation(); 으로도 쓸 수 있다.
+        // //     alert('파랑' + event.currentTarget.id);
+        //     alert('파랑' + event.target.id );
+        // //     // 이벤트 버블링을 여기서 중단해라!!
+        // //     // - 이벤트가 일어났단 사실을 부모님들에게 알리지 마라 ! 
+        //     //event.cancelBubble = true;  // event.stopPropagation(); 으로도 쓸 수 있다.
         // };
         // 업무에 따라 버블링을 둬야하는 업무, 막아야하는 업무가 있는데
         // 상황에 따라 결정해야 한다. 
@@ -104,8 +105,8 @@
 //---------
 // p3      |
 
-// 두번째 인자 false
-// 파 >노> 빨 : 전파후에 버블링으로 올라가면서 통보가 된다. 
+    // 두번째 인자 false
+    // 파 >노> 빨 : 전파후에 버블링으로 올라가면서 통보가 된다. 
     // p1.addEventListener('click', function(){
     //     alert('빨강');
     // }, false);
@@ -117,7 +118,8 @@
     // p3.addEventListener('click', function(){
     //     alert('파랑');
     // }, false);
-
+        // 기본값 false > 버블링
+        // true > 캡쳐링 
         
     // 두번째 인자 > true로 바꿨을 떄 빨 > 노 > 파 내려가면서 통보가 일어난다. 
     // ★★★★ 순서가 뒤집힘
