--- a/src/main/webapp/javascript/question_js/question39.html
+++ b/src/main/webapp/javascript/question_js/question39.html
@@ -5,19 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="css/example.css">
     <style>
         .cat{
             position: relative;
             left: 0;
             top: 0;
             transition: all 1s;
+            transition-timing-function: linear;
         }
     </style>
 </head>
-<body>
+<body oncontextmenu="return false;">
     <!--  -->
-    <img src="../images/catty01.png" class="cat" id ="cat">
+    <img src="../images/catty21.png" class="cat" id ="cat">
     
     <script>
     
